--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "background" : {
     "scripts": ["background.js"]
   },
-  "permissions" : [ "experimental" ],
+  "permissions" : [],
   "icons" : {
     "16" : "sandwich-16.png",
     "48" : "sandwich-48.png",
